--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "et-calendar": "^1.1.2",
-    "et-calendar-react": "^1.1.0-9.4",
     "ethiopian-calendar-date-converter": "^2.1.4",
     "ethiopian-date": "^0.0.6",
     "ethiopic-date": "^1.0.4",
+    "jsonwebtoken": "^9.0.2",
     "kenat": "^2.0.1",
     "lucide-react": "^0.331.0",
     "next": "^15.3.3",
@@ -37,6 +38,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/next": "^9.0.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
